--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-7f78de95-f74c-405c-9207-0443b655cf70;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "server=localhost;userid=root;password=;database=saleswebmvcappdb"
   }
 }
